[package]
name = "leafpipe"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0"

[dependencies]
apodize = "^1.0.0"
chrono = "^0.4.26"
colors-transform = "^0.2.11"
config = { version = "^0.13.3" }
enterpolation = "^0.2.1"
futures = "^0.3"
libspa-sys = "^0.7.2"
mdns-sd = "^0.7.4"
pipewire = "^0.7.2"
reqwest = { version = "^0.11.18", features = ["json"] }
rustfft = "^6.1.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
tokio = { version = "1.29.1", features = ["full"] }
xdg = "^2.1"

# From pxlha
clap = "4.4.10"
image = { version = "0.24", default-features = false, features = ["jpeg", "png", "pnm"] }
log = "0.4.17"
memmap2 = "0.5.3"
nix = "0.24.1"
wayland-client = "0.30.0"
wayland-protocols = { version = "0.30.0", features=["client", "unstable"] }
wayland-protocols-wlr = { version = "0.1.0", features = ["client"] }
png = "0.17.9"

env_logger = { version = "0.9.0", default-features = false, features = ["atty", "termcolor"] }