[package]
name = "leafpipe"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0"

[dependencies]
apodize = "^1.0.0"
clap = "4.4.10"
colors-transform = "^0.2.11"
config = { version = "^0.13.4" }
enterpolation = "^0.2.1"
env_logger = { version = "0.10", default-features = false, features = ["color"] }
image = { version = "0.24", default-features = false, features = ["jpeg", "png", "pnm"] }
libspa-sys = "^0.7.2"
log = "0.4.17"
mdns-sd = "^0.10.0"
memmap2 = "0.9.0"
nix = { version = "^0.27", features = ["fs", "mman"] }
pipewire = "^0.7.2"
reqwest = { version = "^0.11.22", features = ["json"] }
rustfft = "^6.1.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
tokio = { version = "1.34.0", features = ["full"] }
wayland-client = "0.31.1"
wayland-protocols = { version = "0.31.0", features=["client", "unstable"] }
wayland-protocols-wlr = { version = "0.2.0", features = ["client"] }
xdg = "^2.5.2"